--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,3 +11,8 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+ruby:
+  title: Program Publicate
+  description: My little test program
+  image_url: test/png
+  price: 99.99
